--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "serve-favicon": "~2.3.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.13.1"
+  },
+  "engines": {
+    "node": "6.9.1",
+    "npm": "3.10.8"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/.bin/webpack"
   }
 }
-
