--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "app"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/webpack"
+    "postinstall": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -40,6 +40,6 @@
   },
   "engines": {
     "node": "6.9.1",
-    "npm": "3.10.8"
+    "npm": "4.2.0"
   }
 }
