--- a/package.json
+++ b/package.json
@@ -17,29 +17,24 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "css-loader": "^0.23.1",
-    "debug": "~2.2.0",
-    "ejs": "~2.5.2",
-    "express": "^4.13.4",
-    "express-generator": "4.13.4",
-    "jade": "~1.11.0",
     "lodash": "^4.15.0",
     "material-ui": "^0.16.2",
-    "morgan": "~1.7.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
+    "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
-    "serve-favicon": "~2.3.0",
-    "style-loader": "^0.13.0",
+    "redux-thunk": "^2.2.0",
     "webpack": "^1.13.1"
   },
   "engines": {
     "node": "6.9.1",
     "npm": "4.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3"
   }
 }
